welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:2: error: not found: value ||
	if ((a<40 && a>30) && (b<40 && b>30)) || ((a<50 && a>40) && (b<50 && b>40)){
                                              ^